# nrf_rustboard

./: .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs  config.rs  memory.x  user_config.toml
.cargo/: config.toml
src/: battery.rs  ble.rs  config.rs  debounce.rs  key_provision.rs  keycodes.rs  keymap.rs  lib.rs  main.rs  matrix.rs  peripherals.rs  storage.rs
src/ble/: ble_server.rs  central.rs  mod.rs  peripheral.rs  services.rs
src/debounce/: debounce.rs  mod.rs
src/key_provision/: key_provision.rs  lib.rs
src/matrix/: lib.rs  mod.rs  scan_matrix.rs
