[package]
name = "nrf_rustboard"
version = "0.1.0"
edition = "2021"
rust-version = "1.84"
[dependencies]
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "defmt", "executor-thread"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.5", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }

defmt = "0.3.10"

cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
cortex-m-rt = "0.7.5"
defmt-rtt = "0.4.1"
