[package]
name = "nrf_rustboard"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "defmt", "executor-thread", "executor-interrupt" ] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.8.0", features = ["unstable-pac", "time", "nrf52840" ] }
embassy-sync = "0.7.0"
embassy-futures = "0.1.1"

nrf-mpsl = { version = "0.3", default-features = false, features = ["defmt", "critical-section-impl"] }
nrf-sdc = { version = "0.4", default-features = false, features = ["peripheral", "defmt", "nrf52840"] }
trouble-host = { version = "0.5", features = ["derive", "security", "scan", "gatt", "peripheral"] }

defmt = "0.3.10"
defmt-rtt = "0.4.1"

cortex-m = { version = "0.7.7" }
cortex-m-rt = "0.7.5"

rand = { version = "0.8.5", default-features = false }
rand_core = { version = "0.6"}
rand_chacha = { version = "0.3", default-features = false }

panic-probe = { version = "0.3.2", features = ["print-defmt"] }
# usbd-hid = "0.8.2"
static_cell = "2.1.1"
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
ssmarshal = {version = "1.0.0", default-features = false}

[patch.crates-io]
nrf-sdc = { git = "https://github.com/alexmoon/nrf-sdc.git", rev = "11d5c3c"}
nrf-mpsl = { git = "https://github.com/alexmoon/nrf-sdc.git", rev = "11d5c3c"}
 
[profile.release]
debug = 2
